--- a/src/components/common/ThemeSlider/index.module.scss
+++ b/src/components/common/ThemeSlider/index.module.scss
@@ -94,6 +94,6 @@
 	}
 
 	.slider:before {
-		background-color: #424242;
+		background-color: #424242 !important;
 	}
 }
